--- a/package.json
+++ b/package.json
@@ -1,6 +1,21 @@
 {
+  "name": "can-mktorrent",
+  "version": "1.0.0",
+  "description": "JS wrapper for mktorrent",
+  "main": "index.js",
+  "repository": "git@github.com:canverse/can-mktorrent.git",
+  "author": "Can Ibanoglu",
+  "license": "MIT",
+  "type": "module",
+  "files": [
+    "*.js",
+    "build/"
+  ],
+  "scripts": {
+    "install": "node-gyp rebuild"
+  },
   "dependencies": {
-    "bindings": "^1.5.0",
-    "node-addon-api": "^1.7.1"
+    "node-addon-api": "^1.7.1",
+    "node-gyp": "^6.0.1"
   }
 }
