--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "type": "module",
   "files": [
     "*.js",
-    "build/"
+    "build/",
+    "binding.gyp",
+    "*.cc",
+    "*.c"
   ],
   "scripts": {
     "install": "node-gyp rebuild"
